Fix unused private field warning in PageBanner.h https://bugs.webkit.org/show_bug.cgi?id=145925

Reviewed by Darin Adler.

* WebProcess/WebPage/PageBanner.cpp:
(WebKit::PageBanner::~PageBanner):
* WebProcess/WebPage/PageBanner.h: Initialize m_type, m_webPage, m_mouseDownInBanner, and m_isHidden here instead of in the constructor.
* WebProcess/WebPage/mac/PageBannerMac.mm: Use PLATFORM(MAC) instead of !PLATFORM(IOS), they are same in objc files.


Canonical link: https://commits.webkit.org/164012@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185549 268f45cc-cd09-0410-ab3c-d52691b4dbfc